force-app/main/default/objects/TriggerSetting__mdt/fields/BeforeUpdate__c.field-meta.xml
<CustomField>
    <fullName>BeforeUpdate__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Before Update</label>
    <type>Checkbox</type>
</CustomField>