force-app/main/default/objects/TriggerSetting__mdt/fields/MaxRecordIds__c.field-meta.xml
<CustomField>
    <fullName>MaxRecordIds__c</fullName>
    <defaultValue>1200</defaultValue>
    <description>Maximum number of record Ids to store in the apex trigger recursion class PROCESSED_RECORD_IDS map.</description>
    <label>Max Record Ids</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>