force-app/main/default/objects/TriggerSetting__mdt/validationRules/After_Delete_Not_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>After_Delete_Not_Allowed</fullName>
    <active>true</active>
    <description>After Delete is not allowed on User object.</description>
    <errorConditionFormula>AND(MasterLabel = &quot;User&quot;, AfterDelete__c = true)</errorConditionFormula>
    <errorDisplayField>AfterDelete__c</errorDisplayField>
    <errorMessage>After Delete is not allowed on User object.</errorMessage>
</ValidationRule>