force-app/main/default/objects/TriggerSetting__mdt/validationRules/After_Undelete_Not_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>After_Undelete_Not_Allowed</fullName>
    <active>true</active>
    <description>After Delete is not allowed on this object.</description>
    <errorConditionFormula>AND(
(OR(MasterLabel = &quot;OpportunityLineItem&quot;, MasterLabel = &quot;User&quot;)),
(AfterUndelete__c = true)
)</errorConditionFormula>
    <errorDisplayField>AfterUndelete__c</errorDisplayField>
    <errorMessage>After Undelete is not allowed on this object.</errorMessage>
</ValidationRule>