force-app/main/default/objects/TriggerSetting__mdt/validationRules/Before_Delete_Not_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Before_Delete_Not_Allowed</fullName>
    <active>true</active>
    <description>Before Delete is not allowed on this object.</description>
    <errorConditionFormula>AND(MasterLabel = &quot;User&quot;, BeforeDelete__c = true)</errorConditionFormula>
    <errorDisplayField>BeforeDelete__c</errorDisplayField>
    <errorMessage>Before Delete is not allowed on this object.</errorMessage>
</ValidationRule>