force-app/main/default/objects/TriggerSetting__mdt/listViews/TriggerSettings.listView-meta.xml
<ListView>
    <fullName>TriggerSettings</fullName>
    <columns>DeveloperName</columns>
    <columns>BeforeInsert__c</columns>
    <columns>BeforeUpdate__c</columns>
    <columns>BeforeDelete__c</columns>
    <columns>AfterInsert__c</columns>
    <columns>AfterUpdate__c</columns>
    <columns>AfterDelete__c</columns>
    <columns>AfterUndelete__c</columns>
    <columns>MaxRecordIds__c</columns>
    <filterScope>Everything</filterScope>
    <label>Trigger Settings</label>
    <language>en_US</language>
</ListView>